# ecommerce-intelligent-system

./: .gitignore  notebook.ipynb
agents/host-agent/: Dockerfile  main.py  pyproject.toml
agents/host-agent/agent/: __main__.py  agent.py  agent_executor.py  remote_connections.py  tools.py
agents/price-scraper-agent/: Dockerfile  main.py  pyproject.toml
agents/price-scraper-agent/agent/: __main__.py  agent.py  test_client.py
agents/review-analyser-agent/: Dockerfile  main.py  pyproject.toml
agents/review-analyser-agent/agent/: __main__.py  agent.py  agent_executor.py  test_client.py
agents/stock-tracker-agent/: Dockerfile  main.py  pyproject.toml
agents/stock-tracker-agent/agent/: __main__.py  agent.py  test_client.py
price-scraper/: pyproject.toml  server.py  test_server.py
review-analyser/: pyproject.toml  server.py  test_server.py
stock-tracker/: pyproject.toml  server.py  test_server.py
